fixed table issues on mobile and font sizes

--- a/public/assets/css/live_style.css
+++ b/public/assets/css/live_style.css
@@ -1646,6 +1646,10 @@ footer .signature {
         font-size: 15px;
         text-align: right;
     }
+    
+    .event {
+        height: 70px;
+    }
 
     
     .awesome {
